@@ -10,4 +10,5 @@
 15-Oct-2019 V0.18 Refactor, add TaxonomyExtractor(), ReferenceSequenceAssignmentUpdater() and friends.
 16-Oct-2019 V0.19 Checkpoint in improving update reference sequences and troubleshooting tree node lists for ATC
 17-Oct-2019 V0.20 Checkpoint in refactoring reference sequence update processing.
+18-Oct-2019 V0.21 Test version of document-level update of reference sequence assignments
 #
